--- a/code-scanning-test.csproj
+++ b/code-scanning-test.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>code_scanning_test</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
 </Project>
